fdo#75722: fix incorrect import of rotated DML shapes

The DML importer used a tranformation matrix to rotate the shape, but
I replaced it with the same code that's being used in the VML importer
in which the position is correctly set.

I've noticed that I cannot use that code in all cases thanks to the
existing unit tests; that's why I added the bUseRotationTransform. In
case it is set to true the existing transformation matrix rotation is
used.

Finally I added a unit test for this case.

Change-Id: I260c14b42d169def786e15484e4ecb1d8e8584e4